--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,63 @@
     <button id="complimentButton">Get a compliment</button>
 
     <button id="fortuneButton">Get a fortune</button>
+    <br>
+    <br>
+    Goals:
+    <form>
+      <input 
+          type='text'
+          id="goal"
+          placeholder="What's your goal?"/>
+      <!-- <section id="urgency-container">
+          <p>How urgent is your goal?</p>
+          <div id="radio-container">
+              <label for="one">
+                  <input
+                      type="radio"
+                      name="ratings"
+                      value="1"
+                      id="one"/>
+                  1
+              </label>
+              <label for="two">
+                  <input
+                      type="radio"
+                      name="ratings"
+                      value="2"
+                      id="two"/>
+                  2
+              </label>
+              <label for="three">
+                  <input
+                      type="radio"
+                      name="ratings"
+                      value="3"
+                      id="three"/>
+                  3
+              </label>
+              <label for="four">
+                  <input
+                      type="radio"
+                      name="ratings"
+                      value="4"
+                      id="four"/>
+                  4
+              </label>
+              <label for="five">
+                  <input
+                      type="radio"
+                      name="ratings"
+                      value="5"
+                      id="five"/>
+                  5
+              </label>
+          </div>
+      </section> -->
+      <button>add goal</button>
+  </form>
+
+    <section id="user-info"></section>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
